logs/dag_id=spotify_saved_tracks_etl_pipeline/run_id=manual__2025-09-16T03:19:11.428253+00:00/task_id=silver_saved_transform/attempt=2.log
[2025-09-16T03:25:24.183+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_saved_tracks_etl_pipeline.silver_saved_transform manual__2025-09-16T03:19:11.428253+00:00 [queued]>
[2025-09-16T03:25:24.190+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_saved_tracks_etl_pipeline.silver_saved_transform manual__2025-09-16T03:19:11.428253+00:00 [queued]>
[2025-09-16T03:25:24.190+0000] {taskinstance.py:1361} INFO - Starting attempt 2 of 6
[2025-09-16T03:25:24.274+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): silver_saved_transform> on 2025-09-16 03:19:11.428253+00:00
[2025-09-16T03:25:24.280+0000] {standard_task_runner.py:57} INFO - Started process 30052 to run task
[2025-09-16T03:25:24.283+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'spotify_saved_tracks_etl_pipeline', 'silver_saved_transform', 'manual__2025-09-16T03:19:11.428253+00:00', '--job-id', '977', '--raw', '--subdir', 'DAGS_FOLDER/spotify_saved_dag.py', '--cfg-path', '/tmp/tmpwi0bckck']
[2025-09-16T03:25:24.286+0000] {standard_task_runner.py:85} INFO - Job 977: Subtask silver_saved_transform
[2025-09-16T03:25:24.323+0000] {task_command.py:415} INFO - Running <TaskInstance: spotify_saved_tracks_etl_pipeline.silver_saved_transform manual__2025-09-16T03:19:11.428253+00:00 [running]> on host 537418afed42
[2025-09-16T03:25:24.395+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_saved_tracks_etl_pipeline' AIRFLOW_CTX_TASK_ID='silver_saved_transform' AIRFLOW_CTX_EXECUTION_DATE='2025-09-16T03:19:11.428253+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-16T03:19:11.428253+00:00'
[2025-09-16T03:25:24.401+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/etl/db_utils.py", line 11, in run_sql_scripts
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "ORDER"
LINE 43: ORDER BY added_at_myt ASC;
         ^

[2025-09-16T03:25:24.410+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=spotify_saved_tracks_etl_pipeline, task_id=silver_saved_transform, execution_date=20250916T031911, start_date=20250916T032524, end_date=20250916T032524
[2025-09-16T03:25:24.418+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 977 for task silver_saved_transform (syntax error at or near "ORDER"
LINE 43: ORDER BY added_at_myt ASC;
         ^
; 30052)
[2025-09-16T03:25:24.424+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-09-16T03:25:24.440+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
